--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,12 +1,18 @@
 experiences:
-- place: "Microsoft Semantic Machines"
-  time: "2019 - now"
-  title: "Researcher"
+- place: "Microsoft Research Asia"
+  time: "2022.07 - now"
+  title: "Research Intern"
   subtitle: ""
-  category: "work"
+  category: "Intern"
 
-- place: "Stanford CS / Statistics"
-  time: "2016 - 2019"
-  title: "Postdoc"
-  subtitle: "Working for Percy Liang + John Duchi"
-  category: "work"
+- place: "iQiYi"
+  time: "2020.11 - 2021.11"
+  title: "Research Intern"
+  subtitle: ""
+  category: "Intern"
+  
+- place: "Tencent"
+  time: "2020.05 - 2020.08"
+  title: "Research Intern"
+  subtitle: ""
+  category: "Intern"
