--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -2,8 +2,9 @@ papers:
   - title: "Repo4QA: Answering Coding Questions via Dense Retrieval on GitHub Repositories"
     authors: "<b>Minyu Chen</b>, Guoqiang Li, Chen Ma, Jingyang Li1, Hongfei Fu1"
     venue: "The 29th International Conference on Computational Linguistics (COLING 2022)"
-    arXiv: "https://arxiv.org/abs/2009.13586"
-    code: "https://github.com/XuezheMax/apollo"
+#     arXiv: "https://arxiv.org/abs/2009.13586"
+    paper_pdf: "https://aclanthology.org/2022.coling-1.136.pdf"
+    code: "https://github.com/minkow/repo4qa"
     selected: y
     rl: n
     cv: n
