--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -9,6 +9,6 @@ affiliation3: "Shanghai Jiao Tong University"
 # address2: "Marina Del Rey, CA, 90292"
 office: "3203, School of Software"
 # twitter: "https://twitter.com/MaxMa1987"
-# google_scholar: "https://scholar.google.com/citations?user=6_MQLIcAAAAJ"
+google_scholar: "https://scholar.google.com/citations?user=8SanesgAAAAJ"
 github: "https://github.com/Minkow"
 resume: "/assets/CV.pdf"
