--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -2,8 +2,14 @@ experiences:
 - place: "Microsoft Research Asia"
   time: "2022.07 - now"
   title: "Research Intern"
-  subtitle: ""
+  subtitle: "NLC group"
   category: "Intern"
+
+- place: "Shanghai Jiao Tong University"
+  time: "2018.09 – 2021.03"
+  title: "Ph.D. Student"
+  subtitle: "Computing Science and Technology"
+  category: "school"
 
 - place: "iQiYi"
   time: "2020.11 - 2021.11"
@@ -14,5 +20,17 @@ experiences:
 - place: "Tencent"
   time: "2020.05 - 2020.08"
   title: "Research Intern"
-  subtitle: ""
+  subtitle: "Keen Lab"
   category: "Intern"
+
+- place: "Shanghai Jiao Tong University"
+  time: "2018.09 – 2021.03"
+  title: "Master Student"
+  subtitle: "Software Engineering"
+  category: "school"
+
+- place: "University of Science and Technology of China"
+  time: "2014.09 – 2018.06"
+  title: "Bachelor Student"
+  subtitle: "Computing Science and Technology"
+  category: "school"
