--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -29,7 +29,7 @@ experiences:
   subtitle: "Software Engineering"
   category: "school"
 
-- place: "University of Science <br> and Technology of China"
+- place: "University of Sci. & Tech. Of China"
   time: "2014.09 – 2018.06"
   title: "Bachelor Student"
   subtitle: "Computing Science and Technology"
